Bug 46444 - Calc doesn't filter any comments
Summary: Calc doesn't filter any comments
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords:
Depends on:
Blocks: Calc-Comments
  Show dependency treegraph
 
Reported: 2012-02-22 05:36 UTC by Juanjo Marin
Modified: 2023-03-01 18:10 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
mini spreadsheet with comments for testing (8.40 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-02-22 05:36 UTC, Juanjo Marin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Juanjo Marin 2012-02-22 05:36:25 UTC
Created attachment 57457 [details]
mini spreadsheet with comments for testing

When I apply any filter in a spreadsheet, all the comments are always shown. The expected behaviour is showing only the comments of the cells returned from the filter.
Comment 1 sasha.libreoffice 2012-05-23 04:02:53 UTC
Thanks for bugreport
reproduced in 3.3.4 and 3.5.3 on Fedora 64 bit and in 3.5.2 on Windows 7 32 bit
Comments always shown in Calc

What is interesting: in msExcel 2007 comments not shown when cells with them are filtered out
Comment 2 A (Andy) 2014-11-28 22:32:28 UTC
Reproducible with LO 4.3.4.1 and 4.4.0.0.beta1, Win 8.1
Comment 3 QA Administrators 2015-12-20 16:09:52 UTC Comment hidden (noise)
Comment 4 QA Administrators 2019-05-14 02:54:40 UTC Comment hidden (noise, obsolete)
Comment 5 Timur 2019-05-15 10:04:16 UTC
Repro 6.3+
Comment 6 Adam 2020-05-08 20:32:07 UTC
Repro

Version: 6.4.3.2 (x64)
Windows 10.0 Build 18363


Version: 7.0.0.0.alpha0+ (x64)
Windows 10.0 Build 18363
Comment 7 Buovjaga 2021-12-17 12:45:10 UTC
Still repro

Arch Linux 64-bit
Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: b58dbb862296b63f3f2395c59d30fba40fa5f59f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 17 December 2021
Comment 8 Commit Notification 2022-11-22 18:14:38 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b71303fe1b06c1711ad80e5a0269d41ccaaad8e1

tdf#46444 tdf#152081 sc: hide notes in hidden rows or columns

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2022-11-23 16:20:50 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/2194fdaef01f667dd4ef476504981867ad2c80e2

tdf#46444 tdf#152081 sc: hide notes in hidden rows or columns

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2022-11-26 21:41:56 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c9807faad6a154b57a99adfdf9b02bd9e588250f

Related: tdf#46444 tdf#152081 sc: add unit test for note hiding

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2022-12-02 09:51:32 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/e42b39389dd4a9cb7e98c27e032c8d663a1ac95f

Related: tdf#46444 tdf#152081 sc: add unit test for note hiding

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 lol 2023-03-01 18:10:51 UTC
Verified. Checked with

Version: 7.4.5.1 (x64) / LibreOffice Community
Build ID: 9c0871452b3918c1019dde9bfac75448afc4b57f
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded

The comments are shown only for the cells returned from the filter.