tdf#46444 tdf#152081 sc: hide notes in hidden rows or columns

Hide notes in hidden rows or columns just like we do
in case of other sdrobjects.

TODO: unit test

Change-Id: Ib136324d5d0dd8777fc0912af6d8b9ac39935ac1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143024
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>